--- a/stylesheets/css/app.css/app.css
+++ b/stylesheets/css/app.css/app.css
@@ -2,8 +2,24 @@ body {
   font-family: sans-serif;
   color: #555A5E; }
 
-h1 {
-  border-bottom: solid 1px #DADFE3;
-  font-size: 16px;
-  letter-spacing: 1px;
-  padding-bottom: 20px; }
+a {
+  text-decoration: none; }
+
+.header {
+  max-width: 1240px;
+  width: 91%; }
+  .header h1 {
+    border-bottom: solid 1px #DADFE3;
+    font-size: 45px;
+    letter-spacing: 1px;
+    padding-bottom: 20px;
+    margin-bottom: 30px; }
+  .header a {
+    text-decoration: none;
+    color: inherit; }
+
+form {
+  font-size: 35px; }
+  form .container {
+    max-width: 1240px;
+    width: 91%; }
